logs/mobility/build.make.009.log.stderr
In file included from /home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:1:0:
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:26:52: error: ‘geometry_msgs::Pose2D’ has not been declared
   PickUpResult pickUpSelectedTarget(geometry_msgs::Pose2D currentLocation);
                                                    ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:48:68: error: ‘PickUpResult PickUpController::pickUpSelectedTarget’ is not a static member of ‘class PickUpController’
 PickUpResult PickUpController::pickUpSelectedTarget(geometry_msgs::Pose2D currentLocation) {
                                                                    ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:48:53: error: ‘Pose2D’ is not a member of ‘geometry_msgs’
 PickUpResult PickUpController::pickUpSelectedTarget(geometry_msgs::Pose2D currentLocation) {
                                                     ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:48:92: error: expected ‘,’ or ‘;’ before ‘{’ token
 PickUpResult PickUpController::pickUpSelectedTarget(geometry_msgs::Pose2D currentLocation) {
                                                                                            ^
make[2]: *** [CMakeFiles/mobility.dir/src/PickUpController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
